--- a/index.html
+++ b/index.html
@@ -5,8 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+   <div id="enviornment">
+    <div id="cloud">
+    </div>
+    <div id="sun">
+        <div id="upperbody">
+        <div id="eyes">
+            <div id="innereye"></div>
+        </div>
+                    <div id="nose"></div>
+                    <div id="eyes"><div id="innereye"></div></div> 
+                </div>
+                <div id="mouth">
+                </div>
+    </div>
+    <div id="sunmouthtext"></div>
+    <div id="rain">
+    </div>
+    <div id="tree">
+    </div>
+    <div id="car">
+
+    </div>
+    <div id="farse">
+        
+    </div>
+   </div>
+   <button id="mouthfun"></button>
 </body>
 </html>
+<script src="index.js">
+
+</script>
